CUS-2248/CUS-2514 new request: remove cashback
Add config can enable/disable claim reward

--- a/view/adminhtml/web/css/source/_module.less
+++ b/view/adminhtml/web/css/source/_module.less
@@ -13,4 +13,8 @@
             width: 50px;
         }
     }
+
+    #row_payment_other_atoa_atoa_checkout_setting_show_atoa_cashback {
+        display: none;
+    }
 }
